--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    z-index: 4;
+    z-index: 5;
     font-size: 2em;
     padding: 16px;
     transform: translate(-50%, -50%);
@@ -56,6 +56,7 @@ body {
 }
 
 button.ready {
+    top: 80%;
     display: none;
 }
 
@@ -115,8 +116,8 @@ button.ready {
     left: 50%;
     font-size: 2em;
     font-weight: bold;
-    color: gray;
-    background: rgba(255, 255, 255, 0.5);
+    color: #333;
+    background: rgba(255, 255, 255, 0.8);
     transform: translateX(-50%);
 }
 
@@ -137,19 +138,54 @@ button.ready {
 }
 
 video {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
     z-index: 2;
     transform: translate(-50%, -50%);
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 300px;
+}
+
+.my-box video {
+    display: block;
 }
 
 canvas {
-    posation: absolute;
+    position: absolute;
+    z-index: 4;
     top: -4000px;
     left: -4000px;
+}
+
+.ready video {
+    display: none;
+}
+
+.loader {
+    display: none;
+    position: absolute;
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
+    z-index: 6;
+    border: 12px solid rgba(255, 255, 255, 0.1);
+    border-top: 12px solid #aaa;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite;
+}
+
+.loading .loader {
+    display: block;
+}
+
+.loading button.ready {
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
